# Impulse

./: .env  .env_sample  .gitignore  FW.json  FW_config.yaml  README.md  analyze-data.py  app.py  auxiliary.py  download-files.py  download_files.py  ec2_config.yaml.example  emissions.csv  go_fast.sh  impulse.py  kristeva.py  main.py  my_firetasks.py  my_launchpad.staging.yaml  output_workflows.yaml  package-lock.json  package_for_hathitrust.py  pyproject.toml  qlauncher.py  requirements.txt  run_ner_alone.py  setup.py  shell.nix  tasks.py  test.html  test_firetasks.py
Impulse/: cli.py  cli_helpers.py  fireworks_auxiliary.py  ocr_fireworks.py  scans.py  test-scans.py
ad-hoc/: convert-jpg-jp2.py  create-embeddings.py  fix-txt-keys.py  go_fast.py  ground-truthing.py  read-txt-over-http.py  submit_ner_jobs.py
docker/document-extraction/: Dockerfile  requirements.txt
docker/image-processing/: Dockerfile  requirements.txt
docs/: index.md
emissions/: emissions.csv  main.py
examples/: bulk_ingest.py
experiments/: binarize-test.py  chart_data_extraction.py  generate_file.py  isilon-test.py  ner-test.py  store_files_mongo.py
frontend/: .env.example  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: status.tsx
frontend/src/lib/: amplify-config.ts  api.ts
impulse/: __init__.py  auxiliary.py  enrichment_tasks.py  main.py  tasks.py  workflow.yaml  workflow.yml
infra/: app.py  cdk.json  deploy-policy.json  pyproject.toml
infra/stacks/: api.py  auth.py  frontend.py  network.py  processing.py  storage.py
p1074_35556032756942/: Thumbs.db
scripts/: cleanup_instances.py  get_confidences.py  package_hathitrust.py  query_embeddings.py  rag_proof_of_concept.py  start_orchestrator.py  submit_embedding_jobs.py  submit_jobs.py  test_image_processing.py  test_local.sh
src/: requirements-lambda.txt
src/impulse/: config.py  utils.py
src/impulse/api/: __init__.py  admin.py  analysis.py  auth.py  collections.py  create_job.py  delete_job.py  environmental_impact.py  get_job.py  get_results.py  list_documents.py  list_jobs.py  pipeline_status.py  presigned_upload.py  restart_job.py  router.py  search.py
src/impulse/db/: __init__.py  client.py  indexes.py  models.py
src/impulse/handlers/: extraction_handler.py  image_handler.py  lambda_handler.py
tasks/: NER.py  __init__.py  confidence.py  config.py  experimental_tasks.py  fix_ids.py  geocode.py  metadata.py  mets.py  my_pads.py  my_tasks.py  normalize_data.py  summaries.py  tasks.py  test_index.py
tasks/common/: __init__.py  s3.py
tasks/helpers/: __init__.py  funcs.py
tasks/orchestrator/: __init__.py  config.py  drain_loop.py  instance_manager.py  watcher.py
templates/: base.html  index.html  monitor.html  success.html
tests/: manifest.yaml  pipeline.py  qwen3-test-ocr.py  test_utils.py
tests/api/: test_router.py
tests/binarization_task/: binarization_test.yaml
tests/db/: test_db.py
tests/impulse_manifest/: manifest.yaml  manifest2-only-extraction.yaml  test_metadata.yaml  test_summaries.yaml
tests/ocr_task/: context_try.yaml  ocr_test.yaml  summaries_try.yaml  themes_try.yaml
tests/processing/: test_images.py  test_metadata.py
tests/processing_task/: task.yaml
typings/boto3/: __init__.pyi  compat.pyi  crt.pyi  exceptions.pyi  session.pyi  utils.pyi
(+25 files in other folders)
