[project]
name = "impulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.11,<3.14"
dependencies = [
  "accelerate>=1.12.0",
  "boto3>=1.42.2",
  "bs4>=0.0.2",
  "codecarbon>=3.2.2",
  "deskew>=1.5.3",
  "fabric>=3.2.2",
  "fireworks",
  "igraph>=1.0.0",
  "loguru>=0.7.3",
  "lxml>=6.0.2",
  "marker-pdf>=1.10.2",
  "matplotlib>=3.10.6",
  "mplcursors>=0.7",
  "ollama>=0.6.1",
  "opencv-python>=4.12.0.88",
  "pandas>=2.3.3",
  "pdf2image>=1.17.0",
  "pillow>=10.4.0",
  "pip>=25.3",
  "plotly>=6.3.1",
  "pymongo>=4.15.2",
  "pymupdf>=1.27.1",
  "pypdf2>=3.0.1",
  "python-doctr>=1.0.0",
  "sentence-transformers>=5.1.1",
  "spacy>=3.8.11",
  "surya-ocr>=0.17.1",
  "transformers>=4.57.0",
]

[tool.basedpyright]
typeCheckingMode = "basic"
diagnosticMode = "openFilesOnly"
useLibraryCodeForTypes = false

exclude = [
  "**/node_modules",
  "**/__pycache__",
  "**/.venv",
  "**/.tox",
  "**/dist",
  "**/build",
  "**/.git",
]

[tool.uv.sources]
fireworks = { git = "https://github.com/aerithnetzer/fireworks" }
